# mushi-identifier

./: .gitignore  README.md  pyproject.toml
app/: .dockerignore  Dockerfile  README.md
app/app/: main.py  prediction_funcs.py  pyproject.toml
app/model/: classes_mushi_identifier_v1.csv
data/00_external/: evira_species.csv  mushroom_classes.csv
data/00_raw/: README.md
notebooks/: 00-jp-eda-raw-data.ipynb  01-jp-mushi-identifier-v1.ipynb  05-jp-eda-ext-FGVCx.ipynb
src/data/: s00_eda_functions.py  s00_eda_raw_data.py  s01_make_interim.py  s01_make_interim_funcs.py  s02_make_processed.py  s02_make_processed_funcs.py
src/model/: data_funcs.py  make_model_v1.py  make_predictions.py
