[tool.poetry]
name = "mushi-identifier"
version = "0.1.0"
description = ""
authors = ["jpusa <49599941+jpusa@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
tensorflow = "^2.6.0"
keras-tuner = "^1.0.4"
matplotlib = "^3.4.3"
jupyterlab = "^3.1.11"
pandas = "^1.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
